feat: Initial project setup with README and basic structure
chore: Update README to reflect changes in AI tools from Cursor AI to VSCode

fix: Correct AI integration references in SangsomMini-Me.mdc

docs: Add VERIFICATION.md for project verification process

style: Improve demo.html layout and formatting

build: Add jsconfig.json for JavaScript project configuration

build: Create package.json for project dependencies and scripts

build: Add requirements.txt for Python dependencies

feat: Implement Blender automation script for file watching and exporting

feat: Create verification script for project checks and validations

--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,16 @@ htmlcov/
 data/user_profiles.json
 *.save
 
+# NPM and Node
+node_modules/
+package-lock.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Non-critical errors tracking
+non-critical-errors.json
+
 # Temporary files
 *.bak
 *.temp
