feat: Enhance Blender integration and character export functionality
- Updated `.github/copilot-instructions.md` to improve Blender Python validation steps and VSCode integration.
- Modified `.vscode/tasks.json` to include a new task for running unit tests in Blender and updated the Python syntax check command.
- Expanded `Blender/README.md` with new sections for character export and usage instructions.
- Added `Blender/Tests/test_character_controller.py` for unit testing the CharacterController class.
- Enhanced `Blender/character_controller.py` with asset caching for improved performance and added methods for scanning assets.
- Refactored `Blender/export_character.py` to create a reusable export logic function for CLI and Addon.
- Updated `Blender/minime_addon.py` to utilize the shared export logic, improving code maintainability.
- Created `Blender/run_tests.py` to automate unit test execution within Blender.
- Revised `CODE_REVIEW.md` to reflect recent optimizations and family features implementation.
- Improved `Docs/BLENDER_VSCODE_INTEGRATION.md` with updated export automation script instructions.
- Documented development history in `History2.md` detailing recent enhancements and future suggestions.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -61,7 +61,8 @@
             "command": "python",
             "args": [
                 "-m",
-                "py_compile"
+                "compileall",
+                "."
             ],
             "options": {
                 "cwd": "${workspaceFolder}/Blender"
@@ -78,6 +79,18 @@
                     "line": 2
                 }
             },
+            "group": "test"
+        },
+        {
+            "label": "Blender: Run Unit Tests",
+            "type": "shell",
+            "command": "blender",
+            "args": [
+                "--background",
+                "--python",
+                "${workspaceFolder}/Blender/run_tests.py"
+            ],
+            "problemMatcher": [],
             "group": "test"
         },
         {
