Refactor project verification and structure
- Updated VERIFICATION.md to enhance clarity on critical and non-critical checks, including new sections for Unity testing and verified files.
- Bumped package version to 2.0.0 and removed Python linting scripts from package.json.
- Deleted requirements.txt as Python dependencies are no longer needed.
- Added new research documents for alternative game engines: Bevy, Stride, Raylib, and archived Godot 4.
- Removed outdated blender-automation.js script.
- Simplified verify.js by removing Python syntax checks and adjusting output for markdown linting.

--- a/.gitignore
+++ b/.gitignore
@@ -65,35 +65,8 @@ crashlytics-build.properties
 [Aa]ssets/[Ss]treamingAssets/aa/* 
 
 # ============================================================================
-# Blender specific (added for Blender 5.0.0 migration)
+# Python cache (for any Python tools)
 # ============================================================================
-
-# Blender backup and autosave files
-*.blend1
-*.blend2
-*.blend3
-*.blend4
-*.blend5
-*.blend6
-*.blend7
-*.blend8
-*.blend9
-
-# Blender lock files
-*.blend.lock
-
-# Blender crash logs
-*.crash.txt
-blender_crash.txt
-
-# Blender rendered output
-/renders/
-/exports/
-
-# Blender packed external files
-packed_externals/
-
-# Python cache
 __pycache__/
 *.py[cod]
 *$py.class
