--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "sangsom-mini-me",
-  "version": "1.0.0",
-  "description": "Educational Tamagotchi Universe - Unity & Blender Project",
+  "version": "2.0.0",
+  "description": "Educational Tamagotchi Universe - Unity Project",
   "scripts": {
     "verify": "node scripts/verify.js",
     "lint:markdown": "markdownlint **/*.md --ignore node_modules --ignore .venv",
-    "lint:python": "python -m py_compile Blender/*.py Assets/Scripts/**/*.py",
     "test:unity": "echo 'Run Unity tests via Unity Test Runner'",
-    "check:all": "npm run lint:markdown && npm run lint:python",
-    "blender:watch": "node scripts/blender-automation.js",
-    "blender:export": "blender --background Blender/characters/leandi.blend --python Blender/export_character.py",
-    "blender:validate": "python -m py_compile Blender/*.py",
-    "blender:install-addon": "blender --background --python-expr \"import bpy; bpy.ops.preferences.addon_install(filepath='Blender/minime_addon.py'); bpy.ops.preferences.addon_enable(module='minime_addon'); bpy.ops.wm.save_userpref()\"",
-    "blender:test": "blender --background --python Blender/startup_script.py"
+    "check:all": "npm run lint:markdown"
   },
   "repository": {
     "type": "git",
@@ -21,9 +15,9 @@
   "keywords": [
     "education",
     "unity",
-    "blender",
     "tamagotchi",
-    "ai-assisted"
+    "ai-assisted",
+    "csharp"
   ],
   "author": "Teacher Evan",
   "license": "SEE LICENSE IN LICENSE",
