--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,23 @@
 {
-    "blender.executables": [
-        {
-            "path": "C:\\Program Files\\Blender Foundation\\Blender 5.0\\blender.exe",
-            "name": "Blender 5.0",
-            "isDefault": true
-        }
-    ],
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe",
     "python.analysis.extraPaths": [
         "./Assets/Scripts/Runtime",
         "./Assets/Scripts/Editor",
-        "./Assets/Scripts/Tests",
-        "./Blender"
+        "./Assets/Scripts/Tests"
     ],
     "python.autoComplete.extraPaths": [
         "./Assets/Scripts/Runtime",
         "./Assets/Scripts/Editor",
-        "./Assets/Scripts/Tests",
-        "./Blender"
+        "./Assets/Scripts/Tests"
     ],
     "python.analysis.typeCheckingMode": "basic",
     "files.exclude": {
-        "**/*.blend1": true,
         "**/*.pyc": true,
         "**/__pycache__": true,
-        "**/.venv": true
+        "**/.venv": true,
+        "**/Library": true,
+        "**/Temp": true,
+        "**/Logs": true
     },
     "editor.formatOnSave": true,
     "cSpell.words": [
@@ -38,12 +31,12 @@
         "asmdef",
         "asmdefs",
         "venv",
-        "UGUI",
-        "Creat"
+        "UGUI"
     ],
     "cSpell.enableFiletypes": [
         "markdown",
         "javascript",
-        "json"
+        "json",
+        "csharp"
     ]
 }
