feat: Enhance save system with dirty-flag propagation and optimize user profile persistence

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,11 @@
     "recommendations": [
         "ms-python.python",
         "JacquesLucke.blender-development",
-        "ms-python.vscode-pylance"
+        "ms-python.vscode-pylance",
+        "ms-dotnettools.csharp",
+        "ms-dotnettools.csdevkit",
+        "unity.unity-debug",
+        "kreativ-software.unity-snippets",
+        "editorconfig.editorconfig"
     ]
 }
