Add new project settings files and update VSCode recommendations
- Created MemorySettings.asset to manage memory allocation settings.
- Added NavMeshAreas.asset for NavMesh area configurations.
- Introduced Physics2DSettings.asset for 2D physics settings.
- Added PresetManager.asset for managing presets.
- Created ProjectSettings.asset to define various project settings.
- Introduced TagManager.asset for managing tags and layers.
- Added TimeManager.asset to configure time settings.
- Created UnityConnectSettings.asset for Unity services configuration.
- Introduced VFXManager.asset for visual effects settings.
- Added VersionControlSettings.asset for version control configurations.
- Updated setup-unity-vscode.ps1 to change VSCode extension recommendation from 'unity.unity-debug' to 'VisualStudioToolsForUnity.vstuc'.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,12 +1,12 @@
 {
-    "recommendations": [
-        "ms-python.python",
-        "JacquesLucke.blender-development",
-        "ms-python.vscode-pylance",
-        "ms-dotnettools.csharp",
-        "ms-dotnettools.csdevkit",
-        "unity.unity-debug",
-        "kreativ-software.unity-snippets",
-        "editorconfig.editorconfig"
-    ]
+  "recommendations": [
+    "ms-python.python",
+    "JacquesLucke.blender-development",
+    "ms-python.vscode-pylance",
+    "ms-dotnettools.csharp",
+    "ms-dotnettools.csdevkit",
+    "kreativ-software.unity-snippets",
+    "editorconfig.editorconfig",
+    "VisualStudioToolsForUnity.vstuc"
+  ]
 }
