feat: Implement performance optimizations and architectural improvements
- Added asynchronous persistence layer in UserManager to prevent frame drops during auto-saves.
- Optimized user lookups from O(n) to O(1) using a Dictionary for faster access.
- Converted GameManager's auto-save logic to a Coroutine to reduce per-frame overhead.
- Enhanced UI interactions with procedural animations for a more tactile experience.
- Refactored AllUsers property to return IReadOnlyList to minimize garbage collection.
- Updated package dependencies to the latest versions for improved stability and features.
- Created documentation for performance and architecture optimizations.
- Added new files for user management and testing frameworks.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,12 +1,13 @@
 {
-  "recommendations": [
-    "ms-python.python",
-    "JacquesLucke.blender-development",
-    "ms-python.vscode-pylance",
-    "ms-dotnettools.csharp",
-    "ms-dotnettools.csdevkit",
-    "kreativ-software.unity-snippets",
-    "editorconfig.editorconfig",
-    "VisualStudioToolsForUnity.vstuc"
-  ]
+    "recommendations": [
+        "ms-python.python",
+        "JacquesLucke.blender-development",
+        "ms-python.vscode-pylance",
+        "ms-dotnettools.csharp",
+        "ms-dotnettools.csdevkit",
+        "kreativ-software.unity-snippets",
+        "editorconfig.editorconfig",
+        "VisualStudioToolsForUnity.vstuc",
+        "visualstudiotoolsforunity.vstuc"
+    ]
 }
