--- a/Assets/Scripts/Runtime/Runtime.asmdef
+++ b/Assets/Scripts/Runtime/Runtime.asmdef
@@ -2,10 +2,16 @@
     "name": "SangsomMiniMe.Runtime",
     "rootNamespace": "SangsomMiniMe",
     "references": [
-        "Unity.TextMeshPro"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
-    "excludePlatforms": [],
+    "excludePlatforms": [
+        "Android",
+        "Editor",
+        "WSA",
+        "WebGL",
+        "WindowsStandalone64"
+    ],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
@@ -13,4 +19,4 @@
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
-} 
+}
