--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
                 "-ExecutionPolicy",
                 "Bypass",
                 "-Command",
-                "New-Item -ItemType Directory -Force -Path (Join-Path '${workspaceFolder}' 'Logs') | Out-Null; & 'C:\\Program Files\\Unity\\Hub\\Editor\\6000.2.15f1\\Editor\\Unity.exe' -runTests -batchmode -projectPath '${workspaceFolder}' -testResults (Join-Path '${workspaceFolder}' 'Logs/results.xml') -logFile (Join-Path '${workspaceFolder}' 'Logs/Editor.log') -testPlatform EditMode -debugCodeOptimization"
+                "New-Item -ItemType Directory -Force -Path (Join-Path '${workspaceFolder}' 'TestResults') | Out-Null; & 'C:\\Program Files\\Unity\\Hub\\Editor\\6000.2.15f1\\Editor\\Unity.exe' -batchmode -nographics -projectPath '${workspaceFolder}' -runTests -testPlatform editmode -testResults (Join-Path '${workspaceFolder}' 'TestResults/results.xml') -logFile (Join-Path '${workspaceFolder}' 'TestResults/Editor.log') -debugCodeOptimization"
             ],
             "problemMatcher": [],
             "group": "test"
