--- a/Assets/Scripts/Runtime/Runtime.asmdef
+++ b/Assets/Scripts/Runtime/Runtime.asmdef
@@ -1,22 +1,16 @@
 {
-    "name": "SangsomMiniMe.Runtime",
-    "rootNamespace": "SangsomMiniMe",
-    "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
-    ],
-    "includePlatforms": [],
-    "excludePlatforms": [
-        "Android",
-        "Editor",
-        "WSA",
-        "WebGL",
-        "WindowsStandalone64"
-    ],
-    "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
+  "name": "SangsomMiniMe.Runtime",
+  "rootNamespace": "SangsomMiniMe",
+  "references": [
+    "Unity.TextMeshPro"
+  ],
+  "includePlatforms": [],
+  "excludePlatforms": [],
+  "allowUnsafeCode": false,
+  "overrideReferences": false,
+  "precompiledReferences": [],
+  "autoReferenced": true,
+  "defineConstraints": [],
+  "versionDefines": [],
+  "noEngineReferences": false
 }
